URL connections & Input Stream reader. done